Romania celebrates sorin, streamlining youtube integration

--- a/src/pages/lectures/solomon-marcus.astro
+++ b/src/pages/lectures/solomon-marcus.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import EssayCard from "@/components/EssayCard";
+import YouTubeEmbed from "../../components/video/YouTubeEmbed.astro";
 ---
 
 <Layout title="Istrail Lab | Solomon Marcus Lectures">
@@ -30,105 +31,70 @@ import EssayCard from "@/components/EssayCard";
             <h4 class="font-semibold text-lg py-1">
                 A John von Neumann Distinguished Lecture
             </h4>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/12C6ataTArM?si=SPwQH_pxWFcpIAjw"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="12C6ataTArM"
+                title="Lecture 1: The Loneliness of the Mathematican"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Lecture 2: To Prove or Not to Prove, That is the Question!
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/uU49OWxnWBY?si=qyquNGQOnhe0s6_t"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="uU49OWxnWBY"
+                title="Lecture 2: To Prove or Not to Prove, That is the Question!"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Lecture 3: Science Today versus Science Yesterday
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/A2qEzRSiSSw?si=TCas9-rw60yASezk"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="A2qEzRSiSSw"
+                title="Lecture 3: Science Today versus Science Yesterday"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Lecture 4: We Are Surrounded By Hidden Conflict
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/NGK_Lh681aY?si=hE2_W3-EleE7nXgb"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="NGK_Lh681aY"
+                title="Lecture 4: We Are Surrounded By Hidden Conflict"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Lecture 5: Information: What Does It Mean?
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/97HoZHJDiNw?si=Oc_q8KRQkNWTeyUd"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="97HoZHJDiNw"
+                title="Lecture 5: Information: What Does It Mean?"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Lecture 6: Mathematical Mistakes as a Source of Creativity
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/R3tIf8TOM-w?si=9kB--SrB-fq425VZ"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="R3tIf8TOM-w"
+                title="Lecture 6: Mathematical Mistakes as a Source of Creativity"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Lecture 7: The Biological Cell in Spectacle
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/uKafHAEWfto?si=Oo9k86BuXZD7WtVV"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="uKafHAEWfto"
+                title="Lecture 7: The Biological Cell in Spectacle"
+            />
         </div>
 
         <div>
@@ -136,15 +102,10 @@ import EssayCard from "@/components/EssayCard";
                 Lecture 8: Two Neighbors Ignoring Each Other: Infinite Words and
                 Formal Languages
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/EatiEwQaFCI?si=56KqRjPQe48LtZeC"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="EatiEwQaFCI"
+                title="Lecture 8: Two Neighbors Ignoring Each Other: Infinite Words and Formal Languages"
+            />
         </div>
     </div>
 </Layout>
