--- a/src/pages/lectures/youtube.astro
+++ b/src/pages/lectures/youtube.astro
@@ -1,110 +1,74 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import YouTubeEmbed from "../../components/video/YouTubeEmbed.astro";
 ---
 
 <Layout title="Istrail Lab | Solomon Marcus Lectures">
     <h1 class="font-bold text-3xl pt-4">Istrail Laboratory Youtube Channel</h1>
 
-    <div class="grid gap-4">
+    <div class="grid gap-4 max-w-3xl mx-auto">
         <div>
             <h3 class="font-semibold text-xl py-2">
                 J. Craig Venter - Genomics: From Medicine to the Environment
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/zU6nVcvZyy4?si=hiG7FHlK3VaYKvdZ"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="zU6nVcvZyy4"
+                title="J. Craig Venter - Genomics: From Medicine to the Environment"
+            />
         </div>
         <div>
             <h3 class="font-semibold text-xl py-2">
                 John Conway - The Game of Life and Set Theory
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/cQUAwhhC8cU?si=kgg8Q21kq8afMrmS"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="cQUAwhhC8cU"
+                title="John Conway - The Game of Life and Set Theory"
+            />
         </div>
         <div>
             <h3 class="font-semibold text-xl py-2">
                 John Conway Distinguished Lecture - The Symmetries of Things
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/8z6T-7ovA5Q?si=XBM--9yncvnk9H8D"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="8z6T-7ovA5Q"
+                title="John Conway Distinguished Lecture - The Symmetries of Things"
+            />
         </div>
         <div>
             <h3 class="font-semibold text-xl py-2">
-                Samuel Broder - The Human Genome: Sequence and Assembly Was the
-                Easy Part
+                Samuel Broder - The Human Genome: Sequence and Assembly Was the Easy Part
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/BBClgRwDc94?si=1Wtz5m68HWKIRBWl"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="BBClgRwDc94"
+                title="Samuel Broder - The Human Genome: Sequence and Assembly Was the Easy Part"
+            />
         </div>
         <div>
             <h3 class="font-semibold text-xl py-2">
-                Samuel Broder Distinguished Lecture - Lessons in Treating the
-                "Untreatable"
+                Samuel Broder Distinguished Lecture - Lessons in Treating the "Untreatable"
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/oUpe3X-zbII?si=raTSSLRwkXeSpmHM"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="oUpe3X-zbII"
+                title="Samuel Broder Distinguished Lecture - Lessons in Treating the 'Untreatable'"
+            />
         </div>
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Jonathan Yewdell - How to Succeed in Science
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/ubyWe0bJ41s?si=qZ1ThyhrmcaFwS_E"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="ubyWe0bJ41s"
+                title="Jonathan Yewdell - How to Succeed in Science"
+            />
         </div>
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Issam Zineh - Shortening The Translational Lag
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/yk9fadol2nw?si=1NVqbILJPQZr-dvt"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="yk9fadol2nw"
+                title="Issam Zineh - Shortening The Translational Lag"
+            />
         </div>
     </div>
 </Layout>
