--- a/src/pages/lectures/von-neumann-2015.astro
+++ b/src/pages/lectures/von-neumann-2015.astro
@@ -3,6 +3,7 @@ import Layout from "../../layouts/Layout.astro";
 import poster1 from "../../assets/posters/2015_poster_final-1.png";
 import poster2 from "../../assets/posters/2015_poster_final-2.png";
 import EssayCard from "@/components/EssayCard";
+import YouTubeEmbed from "../../components/video/YouTubeEmbed.astro";
 ---
 
 <Layout title="Istrail Lab | John von Neumann Lectures">
@@ -72,257 +73,162 @@ import EssayCard from "@/components/EssayCard";
     <div class="grid gap-4 py-4">
         <div>
             <h3 class="font-semibold text-xl py-2">Opening Remarks</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/zhIFAntHx2w?si=nNJkPjZBRn7znMG6"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="zhIFAntHx2w"
+                title="Opening Remarks"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Susanne Schennach</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/JNZhRZVqXRU?si=ybxUsanvexC3hvf_"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="JNZhRZVqXRU"
+                title="Susanne Schennach"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Mark Satterthwaite</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/41jmlUYB3-o?si=7LAwQnOBtKYQHAeY"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="41jmlUYB3-o"
+                title="Mark Satterthwaite"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Vincent Crawford</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/LBwe2mLMpBU?si=DAPXzUdWcgw0TPyH"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="LBwe2mLMpBU"
+                title="Vincent Crawford"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Sweatbox Session: Satterthwaite, Crawford and Arrow
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/mQW8Z3Sf5so?si=klfZfs4nwmWYvMEb"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="mQW8Z3Sf5so"
+                title="Sweatbox Session: Satterthwaite, Crawford and Arrow"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Freeman Dyson</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/lWbKpkbT0QA?si=-u-kIV2UxEaXRB3f"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="lWbKpkbT0QA"
+                title="Freeman Dyson"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Frank Wilczek</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/7UyCR7rnqWg?si=jD7Qkg8T8PvnluLA"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="7UyCR7rnqWg"
+                title="Frank Wilczek"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Leon Cooper</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/k9GJ4Wx1Giw?si=XJCvtGGJQ_0WDi22"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="k9GJ4Wx1Giw"
+                title="Leon Cooper"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Michael Jordan</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/H5VFuKe8kc8?si=x93pLnQy1jukOkgI"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="H5VFuKe8kc8"
+                title="Michael Jordan"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Nima Arkani-Hamid</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/2eSkse9XdZ4?si=E5dQvc7CLd0MB4LG"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="2eSkse9XdZ4"
+                title="Nima Arkani-Hamid"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Sweatbox Session: Dyson, Cooper, Arkani-Hamid, Wilczeck
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/-HI49HcjMFQ?si=47zstdL2K9aJSAJ-"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="-HI49HcjMFQ"
+                title="Sweatbox Session: Dyson, Cooper, Arkani-Hamid, Wilczeck"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Tom Leighton</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/TW1bGZFI50s?si=ZqNSW3_S6NvH8W2I"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="TW1bGZFI50s"
+                title="Tom Leighton"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Christos Papadimitriou</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/D6zqYUuOmdQ?si=PFEzk3OiEtvo6ez6"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="D6zqYUuOmdQ"
+                title="Christos Papadimitriou"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Leslie Valiant</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/mCBYiTFLgMg?si=9l3G382b2HKDd7Eh"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="mCBYiTFLgMg"
+                title="Leslie Valiant"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Sweatbox Session: Leighton
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/Nn7WWnO2Xd4?si=n4vvW6Ypu0OLxjHH"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="Nn7WWnO2Xd4"
+                title="Sweatbox Session: Leighton"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">
                 Sweatbox Session: Valiant and Papadimitriou
             </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/bgYV7BbcMLQ?si=oXkI2Y3tF4AbEPCK"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="bgYV7BbcMLQ"
+                title="Sweatbox Session: Valiant and Papadimitriou"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">David Berson</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/V6R5PK74DHE?si=f3wPElzs5XxEsGkD"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="V6R5PK74DHE"
+                title="David Berson"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Kenneth Arrow</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/egV0Ale7dp0?si=IzW_fwNCZQkGbFWz"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="egV0Ale7dp0"
+                title="Kenneth Arrow"
+            />
         </div>
 
         <div>
             <h3 class="font-semibold text-xl py-2">Patricia Churchland</h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/cB3nsWfh7qk?si=lagOimDS2N9pDOO2"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <YouTubeEmbed
+                videoId="cB3nsWfh7qk"
+                title="Patricia Churchland"
+            />
         </div>
     </div>
 </Layout>
