adding back links for Ken Dill, Gene Meyers

--- a/src/pages/sorinfest.astro
+++ b/src/pages/sorinfest.astro
@@ -298,7 +298,7 @@ const day2Videos = day2.map((talk) => ({
                     </div>
 
                     <div>
-                        <p>Ken Dill (Laufer Family Endowed Chair in Physical Biology and SUNY Distinguished Professor of Chemistry & Physics, Director of the Louis and Beatrice Laufer Center for Physical and Quantitative Biology, Stony Brook University), a John von Neumann Distinguished Lecture: "The Molecular Origins of Life - The Protein Folding Problem all Over Again?"</p>
+                        <p><a href="#Ken Dill" class="text-blue-600 hover:underline">Ken Dill</a> (Laufer Family Endowed Chair in Physical Biology and SUNY Distinguished Professor of Chemistry & Physics, Director of the Louis and Beatrice Laufer Center for Physical and Quantitative Biology, Stony Brook University), a John von Neumann Distinguished Lecture: "The Molecular Origins of Life - The Protein Folding Problem all Over Again?"</p>
                         <p class="ml-4">Introduction by Brenda Rubenstein (Chemistry, Brown University)</p>
                     </div>
 
@@ -308,7 +308,7 @@ const day2Videos = day2.map((talk) => ({
                     </div>
 
                     <div>
-                        <p>Gene Myers (Director of Max Planck Institute of Molecular Cell Biology and Genetics, emeritus, former VP of Informatics Research, Celera Genomics), a John von Neumann Distinguished Lecture: "Sorting for Speed"</p>
+                        <p><a href="#Gene Meyers" class="text-blue-600 hover:underline">Gene Myers</a> (Director of Max Planck Institute of Molecular Cell Biology and Genetics, emeritus, former VP of Informatics Research, Celera Genomics), a John von Neumann Distinguished Lecture: "Sorting for Speed"</p>
                         <p class="ml-4">Introduction by Bjarni Halldorsson (deCODE Genetics, and Biomedical Engineering, Reykjavík University)</p>
                     </div>
 
